css/styles.css
html {
    height: 100%;
    min-height: 100%;
    max-height: 100%;
    line-height: 1.3;
}

body {
    height: 100%;
    min-height: 100%;
    max-height: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
    font-family: 'Roboto', sans-serif;
}

#content {
    display: flex;
    width: 100%;
    height: 100%;
    min-height: 100%;
    max-height: 100%;
}

#content.full-screen {
    flex-direction: column;
}

#left, #content.full-screen {
    display: flex;
    height: 100%;
    min-height: 100%;
    max-height: 100%;
    background-color: #ececec;
    padding: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: space-between;
    border-right: 2px #7c7c7c2f solid;
}

#left {
    width: 40%;
}

#top {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: left;
    max-height: calc(100% - 34px);
    padding: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

#article-title {
    display: inline-block;
    margin: 0;
    padding-right: 8px;
}

#source_link {
    display: inline-block;
}

#source_link .material-icons {
    font-size: 2em;
}

.material-rotate.material-icons {
    transform: rotate(-45deg);
}

#left #skb-content {
    overflow: auto;
    padding: 12px;
    padding-top: 0;
}

#nav {
    display: flex;
    width: 100%;
    flex-wrap: nowrap;
    justify-content: space-evenly;
    align-items: center;
    border-top: 2px #7c7c7c2f solid;
}

#nav .nav-link {
    display: inline-block;
    width: 100%;
    height: 32px;
    text-align: center;
}

#nav .nav-link:hover {
    background-color: #bbc0c4;
}

#nav .nav-link .material-icons {
    width: 32px;
    height: 32px;
    font-size: 2em;
}

#right {
    width: 60%;
    display: inline-block;
    height: 100%;
    min-height: 100%;
    max-height: 100%;
    background-color: #ececec;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.full {
    width: 100%;
    height: 100%;
}

#right .scastie.embedded, #right .scastie.embedded .main-panel, #right .scastie.embedded .main-panel .content, #right .scastie.embedded .main-panel .content .editor-container.inner-container, #right .scastie.embedded .main-panel .content .editor-container.inner-container .code {
    display: inline-block;
    width: 100%;
    min-width: 100%;
    max-width: 100%;
    height: 100%;
    min-height: 100%;
    max-height: 100%;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

#right .scastie.embedded, #right .scastie.embedded .app {
    display: inline-block;
    width: 100%;
    min-width: 100%;
    max-width: 100%;
    height: 100%;
    min-height: 100%;
    max-height: 100%;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

#right .scastie.embedded .main-panel .content .editor-container .editor-wrapper {
    height: calc(100% - 50px);
    padding-top: 8px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

#right .scastie.embedded .main-panel .content .editor-container.inner-container .code {
    height: 100%;
}

#right .scastie.embedded .main-panel .content .editor-container.inner-container .code.console-open {
    height: 65%;
    min-height: auto;
}

#right .scastie.embedded .console-container.console-open {
    height: 35%;
}

@media only screen and (max-width: 770px) {
    #right .scastie.embedded {
        margin-left: -40px !important;
        margin-right: -40px !important;
        margin-bottom: 14px !important;
        width: calc(100% + 80px - 8px) !important;
        padding: 0px 4px !important;
    }
}

#right .scastie ul.embedded-menu {
    position: inherit;
    display: inline-block;
    margin: 0px auto;
}

#right .scastie ul.embedded-menu li {
    display: inline-block;
    margin: 5px 5px;
    width: 120px;
    padding: 6px;
}

#right .scastie .runtime-error, #right .scastie .runtime-error pre {
    width: auto;
}

#right .scastie.embedded pre.inline[title="Unit"] {
    display: none;
}

#right #load-scastie {
    display: flex;
    cursor: pointer;
    width: 100%;
    height: 100%;
    align-items: center;
    justify-items: center;
    justify-content: space-evenly;
    font-weight: bold;
}

#right #load-scastie:hover {
    background-color: #bbc0c4;
}

#right #load-scastie-text {
    display: block;
}

#right.right-list {
    overflow: auto;
    background-color: #ececec;
}

#right.right-list #list-posts {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    min-height: 100%;
    justify-content: center;
    flex-wrap: nowrap;
    overflow-x: hidden;
}

#right.right-list #list-posts .list-post-element.link-to-skb {
    display: flex;
    width: 100%;
    padding: 8px;
    padding-left: 5%;
    color: black;
    text-decoration: none;
    font-weight: bold;
    justify-content: left;
    flex-wrap: nowrap;
    align-items: center;
}

#right.right-list #list-posts .list-post-element.link-to-skb:hover {
    background: #bbc0c4
}

#right.right-list #list-posts .list-post-element.link-to-skb:hover .skb-title {
    color: black;
    text-decoration: underline;
    font-weight: bold;
}

#right.right-list #list-posts .list-post-element.link-to-skb .active-skb, #right.right-list #list-posts .list-post-element.link-to-skb .active-skb .material-icons {
    margin: 0;
    padding: 0;
    width: 20px;
    height: 20px;
    display: block;
    font-size: 20px;
    text-decoration: none !important;
}

#right.right-list #list-posts .list-post-element.link-to-skb .active-skb {
    margin-right: 10px;
}

code, pre {
    display: inline-block;
    background-color: #d6d9db;
    font-family: 'Roboto Mono', monospace;
    padding: 2px 4px;
    margin: 2px;
    border-radius: 2px;
}

pre {
    display: block;
    padding: 16px;
    overflow-x: auto;
}

#discord_link {
    display: inline-block;
    height: 2em;
}

#discord_link img {
    height: 2em;
    display: block;
}

#header .title {
    display: flex;
    justify-content: space-between;
    padding: 10px;
    padding-bottom: 0;
}

#header .title #title-links a {
    text-decoration: none;
    color: black;
}

#skb-clue {
    border: 1px solid #7c7c7c2f;
    padding: 0px 8px;
    border-radius: 12px;
    position: relative;
}

#right .loading {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    margin: 0;
    padding: 0;
    font-weight: bolder;
    z-index: 999;
}

#right .scastie-container {
    position: relative;
    height: 100%;
    width: 100%;
}

.loading.scastie-loading {
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    z-index: 999;
    background-color: #ececec;
}

#skb-clue #skb-content-learn-more {
    cursor: pointer;
    display: flex;
    /* text-align: center; */
    margin: 0;
    font-weight: bolder;
    z-index: 999;
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    border-radius: 12px;
    align-items: start;
    justify-content: center;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding-top: 10%;
}

#skb-clue #skb-content-learn-more:hover {
    /* text-decoration: underline; */
    background-color: #bbc0c4;
}

#skb-clue .skb-content {
    opacity: 0;
    -webkit-transition: opacity 750ms ease-out;
    -moz-transition: opacity 750ms ease-out;
    -o-transition: opacity 750ms ease-out;
    transition: opacity 750ms ease-out;
}

#skb-clue .skb-content.skb-visible {
    display: block;
    opacity: 1;
}

#skb-instructions {
    overflow: auto;
    padding: 12px;
    padding-top: 0;
    font-size: 1em;
}

#content.full-screen #skb-instructions {
    padding-left: 10%;
    padding-right: 10%;
}

#made-by {
    display: flex;
    justify-content: space-between;
    flex-wrap: nowrap;
    align-items: center;
    padding: 4px 12px;
}

#made-by a.icon-link {
    text-decoration: none;
    color: black;
    margin-right: 4px;
}

#made-by .material-icons {
    font-size: 1.3em;
}

#made-by .img-icon {
    height: 1.3em;
}

.flex {
    display: flex !important;
}

